--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -71,6 +71,7 @@
     </style>
 
     <style name="change_user_data_edt_text_style">
+        <item name="android:textCursorDrawable">@drawable/text_cursor_background</item>
         <item name="android:padding">15dp</item>
         <item name="background">@drawable/background_edt_address</item>
         <item name="android:layout_width">250dp</item>
@@ -127,4 +128,16 @@
         <item name="android:textSize">20sp</item>
         <item name="android:textColor">@color/black</item>
     </style>
+
+    <style name="enter_phone_code_description_text">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">20dp</item>
+        <item name="android:layout_marginTop">20dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textColor">@color/gray_600</item>
+        <item name="android:textSize">15sp</item>
+    </style>
+
 </resources>
