--- a/app/src/main/res/layout/fragment_add_card.xml
+++ b/app/src/main/res/layout/fragment_add_card.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.screens.AddCardFragment">
+    tools:context=".ui.screens.change_user_data.AddCardFragment">
 
     <TextView
         android:id="@+id/become_driver_car_number_description"
@@ -43,6 +43,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/add_card_data"
             android:layout_width="match_parent"
+            android:maxLength="5"
             android:layout_height="wrap_content"
             android:inputType="textImeMultiLine|number"/>
     </com.google.android.material.textfield.TextInputLayout>
@@ -59,6 +60,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/add_card_cvv"
             android:layout_width="match_parent"
+            android:maxLength="3"
             android:layout_height="wrap_content"
             android:inputType="textImeMultiLine|numberPassword"/>
     </com.google.android.material.textfield.TextInputLayout>
