--- a/app/src/main/res/layout/fragment_become_driver_license_photo.xml
+++ b/app/src/main/res/layout/fragment_become_driver_license_photo.xml
@@ -17,8 +17,10 @@
     <LinearLayout
         android:id="@+id/become_driver_photo_license_text_view_description"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:orientation="vertical"
+        android:layout_marginVertical="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/become_driver_photo_license_btn_save_changes"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/become_driver_photo_description">
@@ -30,7 +32,7 @@
         <ImageView
             android:id="@+id/photo_license_image"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="match_parent"
             android:layout_marginHorizontal="20dp"
             android:layout_marginVertical="5dp"
             android:background="@drawable/become_driver_photo_image_background" />
