--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:gravity="bottom"
     app:umanoOverlay="true"
-    app:umanoPanelHeight="400dp"
+    app:umanoPanelHeight="50dp"
     app:umanoShadowHeight="0dp">
 
     <fragment
@@ -15,22 +15,22 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.screens.MapsFragment" />
+        tools:context=".ui.screens.MapsFragment"/>
 
     <LinearLayout
         android:id="@+id/liner"
-        android:layout_height="400dp"
+        android:layout_height="380dp"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:background="@drawable/search_map_slider_background">
 
-        <!--<View
+        <View
             android:layout_width="40dp"
             android:layout_height="5dp"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
             android:background="@drawable/search_map_line_background"
-            tools:ignore="RtlSymmetry" /> -->
+            tools:ignore="RtlSymmetry" />
 
         <androidx.cardview.widget.CardView
             style="@style/card_view_style"
@@ -42,37 +42,104 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <fragment
-                    android:layout_weight="9"
-                    android:id="@+id/autocomplete_fragment"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"/>
+                <EditText
+                    android:id="@+id/start_location"
+                    style="@style/map_edit_text_address_style"
+                    android:hint="@string/start_point_hint" />
 
                 <View
                     style="@style/underline_style"
                     android:layout_margin="15dp" />
 
-                <fragment
-                    android:layout_weight="9"
-                    android:id="@+id/autocomplete_2_fragment"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"/>
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_gravity="start">
+
+                    <EditText
+                        android:id="@+id/end_location"
+                        android:layout_width="200dp"
+                        style="@style/map_edit_text_address_style"
+                        android:hint="@string/end_pont_hint"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"/>
+
+                    <ImageButton
+                        android:id="@+id/add_center_point"
+                        android:layout_width="45dp"
+                        android:layout_height="45dp"
+                        android:background="@color/white"
+                        android:src="@drawable/ic_add"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="@id/end_location"
+                        app:layout_constraintBottom_toBottomOf="@id/end_location"/>
+
+                </LinearLayout>
 
                 <View
+                    android:id="@+id/view"
+                    android:visibility="gone"
                     style="@style/underline_style"
                     android:layout_margin="15dp" />
 
-                <fragment
-                    android:layout_weight="9"
-                    android:id="@+id/autocomplete_3_fragment"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"/>
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <EditText
+                        android:visibility="gone"
+                        android:layout_width="200dp"
+                        android:id="@+id/center_location"
+                        style="@style/map_edit_text_address_style"
+                        android:hint="@string/stop_point" />
+
+                    <ImageButton
+                        android:id="@+id/delete_center_point"
+                        android:layout_width="45dp"
+                        android:visibility="gone"
+                        android:layout_height="45dp"
+                        android:background="@color/white"
+                        android:src="@drawable/ic_delete"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="@id/end_location"
+                        app:layout_constraintBottom_toBottomOf="@id/end_location"/>
+
+                </LinearLayout>
 
             </LinearLayout>
         </androidx.cardview.widget.CardView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:gravity="start"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/coast_ride"
+                style="@style/map_text_view_data"
+                android:text="@string/coast_ride_description_maps_fragment"/>
+
+            <TextView
+                android:id="@+id/pay_method"
+                style="@style/map_text_view_data"
+                android:text="@string/pay_method_ride_description_maps_fragment"/>
+
+            <TextView
+                android:id="@+id/time_ride"
+                style="@style/map_text_view_data"
+                android:text="@string/time_ride_description_maps_fragment"/>
+
+            <TextView
+                android:id="@+id/distance_ride"
+                style="@style/map_text_view_data"
+                android:text="@string/dist_ride_description_maps_fragment"/>
+
+        </LinearLayout>
 
         <Button
             style="@style/change_user_data_btn_style"
